# omni-ai

./: .coverage  .gitignore  GETTING_STARTED.md  PROJECT_STATUS.md  README.md  USAGE_GUIDE.md  demo_advanced_reasoning.py  demo_integration.py  demo_knowledge_manager.py  demo_nl_interface.py  demo_security_fortress.py  launch_gui.py  neural_test_output.txt  pyproject.toml  real_ai_demo.py  simple_nl_demo.py  test_ai_brain.py  test_enhanced_memory_system.py  test_memory_integration.py  test_neural_ai_brain.py  test_neurosymbolic_framework.py  test_security_proof.py  working_ai_demo.py
data/: demo_memory.db  memory.db
data/memory/: autobiographical.db  episodic.db  long_term.db  procedural.db  semantic.db
demo_knowledge_bases/: index.db
demo_knowledge_bases/backups/: Medical Knowledge_backup_20251001_200333_198e5d63.json  Medical Knowledge_backup_20251001_200402_a33f30e5.json  Medical Knowledge_backup_20251001_200515_a66a9a9b.json  Medical Knowledge_backup_20251001_200547_fe3f9673.json
demo_knowledge_bases/data/: Business_Logic_3ae0eb9f.json  Business_Logic_4244937b.json  Business_Logic_76edcabc.json  Business_Logic_c68f2295.json  Medical_Knowledge_198e5d63.json  Medical_Knowledge_534bad30.json  Medical_Knowledge_a33f30e5.json  Medical_Knowledge_a66a9a9b.json  Medical_Knowledge_fe3f9673.json  Philosophy_2711bcc8.json  Philosophy_941d6d86.json  Philosophy_Graph_a249e965.json  Philosophy_b5bcc169.json  Philosophy_f71d2e5b.json  Philosophy_from_Reasoner_57bce89a.json  Philosophy_from_Reasoner_6290e1a0.json  Science_Facts_21a4781b.json  Science_Facts_21a4781b.yaml  Science_Facts_a8897da6.json  Science_Facts_a8897da6.yaml  Science_Facts_b9762065.json  Science_Facts_b9762065.yaml  Science_Facts_f848bfdb.json  Science_Facts_f848bfdb.yaml  Tech_Stack_15a9fba5.json  Tech_Stack_30ba3466.json  Tech_Stack_4c12ca97.json  Tech_Stack_92cf716f.json
demo_knowledge_bases/exports/: Medical_Knowledge_export_20251001_200402.rdf  Medical_Knowledge_export_20251001_200402.txt  Medical_Knowledge_export_20251001_200402_a33f30e5.db  Medical_Knowledge_export_20251001_200515.rdf  Medical_Knowledge_export_20251001_200515.txt  Medical_Knowledge_export_20251001_200515_a66a9a9b.db  Medical_Knowledge_export_20251001_200547.rdf  Medical_Knowledge_export_20251001_200547.txt  Medical_Knowledge_export_20251001_200547_fe3f9673.db
docs/: ENHANCED_MEMORY_SYSTEM.md
gui/: cinematic_gui.py
src/omni_ai/: cli.py
src/omni_ai/brain/: __init__.py  autonomous.py  consciousness.py  enhanced_consciousness.py  memory.py  neurons.py  neurosymbolic_integration.py  personality.py  reasoning.py  reflection.py
src/omni_ai/core/: __init__.py  file_utils.py  safe_processing.py  scalable_architecture.py  text_analysis.py
src/omni_ai/memory/: __init__.py  enhanced_memory.py  memory_integration.py
src/omni_ai/multimodal/: multimodal_processor.py
src/omni_ai/neurosymbolic/: __init__.py  advanced_reasoner.py  knowledge_graph.py  knowledge_manager.py  neural_symbolic_bridge.py  nl_interface.py  symbolic_reasoner.py
src/omni_ai/security/: __init__.py  auth.py  crypto.py  hardening.py  input_validation.py  monitoring.py
tests/: __init__.py  test_cli.py  test_security.py  test_text_analysis.py
